package com.observer;

public interface DisplayElement {
    public void display();
}
