package com.observer;

public interface Observer {
    public void update(double temperature, double humidity, double pressure);
}
